[package]
name = "todo_manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = "0.4.6"
structopt = "0.3.23"
serde_json = "1.0.67"
dirs = "3.0.2"

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]